--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,9 @@
 body {
   font-family: sans-serif;
 }
+
+.mybooks-list .am-list-item img {
+  width: 33px;
+  height: 44px;
+  vertical-align: middle;
+}
