--- a/client/reusables/chattery/chattery.css
+++ b/client/reusables/chattery/chattery.css
@@ -1,25 +1,27 @@
 .chattery-main-container {
-  /* max-width: 50em; */
+  max-width: 50em;
 }
 
 .chattery-window-container {
   width: 100%;
   float: none;
+  box-shadow: inset 0 0 1px 0 rgba(50, 50, 50, 0.5);
+  /* background-color: White; */
 }
 
 .chattery-window {
   display: flex;
   flex-direction: column;
   font-size: 14px;
-  max-height: 70vh;
-  min-height: 320px;
+  max-height: 80vh;
+  min-height: 400px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .chattery-inputform-container {
   width: 100%;
-  padding: 12px;
+  padding: 20px;
   background-color: #fff;
 }
 
@@ -30,12 +32,12 @@
 
 .chattery-input {
   width: calc(100% - 60px);
-  min-height: 96px;
+  height: 38px;
   padding: 6px 10px;
   background-color: #fff;
   border: 1px solid #d1d1d1;
   border-radius: 4px 0 0 4px;
-  /* border-right: none; */
+  border-right: none;
   box-shadow: none;
   box-sizing: border-box;
 }
@@ -71,6 +73,13 @@
   float: left;
 }
 
+/* General CSS Setup */
+body {
+  background-color: rgb(231, 233, 233);
+  font-family: 'Lucida sans', 'Ubuntu-Italic', 'Helvetica-Neue', 'Helvetica',
+    'Arial', sans;
+}
+
 /* container */
 .container {
   padding: 5% 5%;
@@ -81,7 +90,7 @@
   margin: 10px 20px;
   display: inline-block;
   position: relative;
-  width: 80%;
+  width: 240px;
   height: auto;
   background-color: #eee;
 }
@@ -313,7 +322,6 @@
 
 /* talk bubble contents */
 .talktext {
-  color: #010101;
   padding: 0.5em 1em;
   text-align: left;
   line-height: 1.5em;
@@ -322,7 +330,6 @@
   /* remove webkit p margins */
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  white-space: pre-line;
 }
 
 .talktext-senderinfo {
@@ -338,65 +345,21 @@
 }
 
 /* width */
-.chattery-window::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-.chattery-window::-webkit-scrollbar-track {
-  background: #fff;
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
 /* Handle */
-.chattery-window::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #888;
 }
 
 /* Handle on hover */
-.chattery-window::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-/* SKOGEN */
-
-.chattery-window {
-  margin: 12px;
-  border: 1px solid #030303;
-  background-color: #fff5f4;
-}
-
-.talk-bubble {
-  background-color: #fff;
-  border: 1px solid;
-  border-radius: 0;
-}
-
-.tri-right.right-in:after {
-  border: 6px solid;
-  border-color: #030303 transparent transparent #030303;
-}
-
-.tri-right.left-in:after {
-  border: 6px solid;
-  border-color: #030303 #030303 transparent transparent;
-}
-
-.chattery-input {
-  border-radius: 0;
-  border: 1px solid #030303;
-  /* border-right: none; */
-  color: #030303;
-}
-
-.chattery-submitbutton {
-  border-radius: 0;
-  border: 1px solid #030303;
-  background-color: #fbd5d0;
-  text-transform: uppercase;
-  font-style: italic;
-  font-weight: 700;
-}
-
-.chattery-input:focus {
-  border-color: #030303;
 }
