--- a/client/main.css
+++ b/client/main.css
@@ -6,3 +6,42 @@ body {
   z-index: 100000;
   box-shadow: 0 0 5px;
 }
+
+#map {
+  width: 100vw;
+  height: 100vh;
+}
+
+.control-panel {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 320px;
+  background: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  padding: 12px 24px;
+  margin: 20px;
+  font-size: 13px;
+  line-height: 2;
+  color: #6b6b76;
+  text-transform: uppercase;
+  outline: none;
+}
+
+html,
+body {
+  font-family: 'Roboto', 'Helvetica', arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #fcfcfc;
+  height: 100%;
+}
+
+.h100 {
+  height: 100%;
+}
+
+#map {
+  width: auto;
+  min-height: 350px;
+}
