--- a/client/main.css
+++ b/client/main.css
@@ -51,3 +51,10 @@ body {
   box-shadow: 0 0 5px;
   border: 1px solid #f6f6f6;
 }
+
+.hero,
+.hero.is-light,
+.hero.is-dark {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
