--- a/client/main.css
+++ b/client/main.css
@@ -58,3 +58,7 @@ body {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+
+body.prevent-scroll {
+  overflow: hidden;
+}
